<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ContacLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ContacFragment">


    <TextView
        android:id="@+id/contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONTACTO"
        android:textAlignment="center"
        android:textColor="@color/VerdeAymara"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lh_linea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacto">

        <TextView
            android:id="@+id/txt_instrucciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:text="@string/txt_instrucciones"
            android:textAlignment="gravity"
            android:textColor="@color/VerdeAymara"
            android:textColorHighlight="@color/VerdeAymara"
            android:textColorHint="@color/VerdeAymara"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lv_linea2"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/lh_linea1"
        tools:layout_editor_absoluteX="5dp">

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_nombreyapellidocontac"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/ed_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/em_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_mailcontac"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/em_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/en_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_edadcontac"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/en_edad"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:id="@+id/ln_sexo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_sexo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_sexocontac" />

            <RadioGroup
                android:id="@+id/rbg_sexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:text="@string/rb_masculino"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="5dp"
                    android:text="@string/rb_femenino"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <RadioButton
                    android:id="@+id/rb_otro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_otro"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    tools:ignore="VisualLintButtonSize" />
            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/end_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_alturacontac"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/en_altura"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/end_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_kgcontac"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/en_peso"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_objetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_objetivocontac"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/ed_objetivo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_nutricion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_nutricioncontac"
            android:drawablePadding="20dp"
            android:text="@string/ed_nutricion"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rbg_nutricion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_si"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cb_no"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Texto de Comentario -->
            <TextView
                android:id="@+id/comentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comentario:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!-- Rectángulo para ingresar información -->
            <EditText
                android:id="@+id/ed_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rectangle_border"
                android:hint="Escribe tu comentario aquí"
                android:padding="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lh_linea4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_linea2">

        <Button
            android:id="@+id/btn_enviar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:backgroundTint="@color/botonEnviar"
            android:onClick="enviarDatos"
            android:text="@string/btn_enviar"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_borrar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/botonBorrar"
            android:onClick="borrar"
            android:text="@string/btn_borrar"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>